# nextjs-app

./: README.md  next.config.js  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-witty-glacier-0c9e26300.yml  main_2023-python-backend.yml  main_flask-api-2023.yml
api/: app.py  buildspec.yml  pyproject.toml  requirements.txt
api/myproject/: app.py  imageClassification.py
pages/: _app.tsx  index.tsx
pages/fruits/: fruits-component.tsx  index.tsx  input-component.tsx
pages/image-classification/: index.tsx
server/server/: app.py  test.py
styles/: Home.module.css  ImageClassificationPage.module.css
