[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Gavin Cheng <cwmima@hotmail.com>"]
readme = "README.md"
packages = [{ include = "myproject" }]

# [tool.poetry.scripts]
# server = "myproject.app:main"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
waitress = "^2.1.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
